--- a/ASEAN Rail.html
+++ b/ASEAN Rail.html
@@ -1,14 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASEAN Rail</title>
-    <link rel="stylesheet" href="ASEAN Rail.css">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ASEAN Rail</title>
+  <link rel="stylesheet" href="ASEAN Rail.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+</head>
+<body>
+  <nav>
+      <div class="navtitle">
+        <img id="logo" src="Resources/ASEANlogo.png">
+        <h2 id="navtitletext">ASEAN Rail</h2>
+      </div>
+        <button id="navbutton">
+        </button>
+  </nav>
+  <div class="landing">
+    <div class="landingvidbox">
+      <video autoplay id="landingpagevid" muted src="Resources/Whoosh Whoosh Whoosh Langsung Melesat! (Official Commercial Video).mp4"></video>
+    </div>
+    <div class="landingbooknow">
+      <p id="landingbooknowbuttontext">TICKETS</p>
+    </div>
+  </div>
+  <div class="ticketsearch">
+  </div>
+  <h2>Explore</h2>
+  <div class="mainmenu">
+    <div class="menubox">
+      <img src="Resources/trainschedule.jpg">
+      <div class="menuboxtitle" id="timepricebox">
+        <h3 id="timeprice">Timetables and Prices</h3>
+      </div>
+    </div>
+    <div class="menubox">
+      <img id="routemappic" src="Resources/route map.jpg">
+      <div class="menuboxtitle">
+        <h3>Route Map</h3>
+      </div>
+    </div>
+    <div class="menubox">
+      <img src="Resources/th-1513963952.jpg">
+      <div class="menuboxtitle">
+        <h3>Train Amenities</h3>
+      </div>
+    </div>
+  </div>
+  <h2>Experience</h2>
+  <img id="fasttrainpic" src="Resources/fast train.jpg">
+  <h2>Discover</h2>
+  <div class="destinationsmenu">
+    <div class="destinationsbox , bkk">
+      <img src="Resources/bangkok.jpg" id="bkkpic">
+      <h3 id="bkktext">Bangkok</h3>
+    </div>
+    <div class="destinationsbox , hanoi">
+      <img src="Resources/Hanoi.jpg" id="hanoipic">
+      <h3 id="hanoitext">Hanoi</h3>
+    </div>
+    <div class="destinationsbox , sng">
+      <img src="Resources/singapore.jpg" id="sngpic">
+      <h3 id="sngtext">Singapore</h3>
+    </div>
+    <div class="destinationsbox , kl">
+      <img src="Resources/Kuala-Lumpur-Skyline.jpeg" id="klpic">
+      <h3 id="kltext">Kuala Lumpur</h3>
+    </div>
+  </div>
+  <h2>Routes</h2>
+  <div class="routemap">
+    <img id="routemappic" src="Resources/ASEAN route map.png">
+  </div>
+  <h2>Logistics</h2>
+  <div class="timetablesandprices">
 
-  </head>
-  <body>
+  </div>
+  <h2>Enjoy</h2>
+  <div class="trainamenities">
 
-  </body>
-  <script src="ASEAN Rail.js"></script>
+  </div>
+</body>
+<script src="ASEAN Rail.js"></script>
 </html>
